--- a/pom.xml
+++ b/pom.xml
@@ -11,19 +11,47 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <junit.version>5.9.1</junit.version>      </properties>
+    <junit.version>5.9.1</junit.version>
+      <os>win</os>
+  </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>19</version>
+      <classifier>${os}</classifier>
+      <version>19.0.2.1</version>
     </dependency>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>19</version>
+      <classifier>${os}</classifier>
+      <version>19.0.2.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-media</artifactId>
+      <classifier>${os}</classifier>
+      <version>19.0.2.1</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-graphics</artifactId>
+      <classifier>${os}</classifier>
+      <version>19.0.2.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <classifier>${os}</classifier>
+      <version>19.0.2.1</version>
+    </dependency>
+
                                     
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -44,10 +72,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
-        <configuration>
-          <source>19</source>
-          <target>19</target>
-        </configuration>
+                <configuration>
+                    <source>19</source>
+                    <target>19</target>
+                </configuration>
             </plugin>
       <plugin>
         <groupId>org.openjfx</groupId>
